--- a/05_Functions.html
+++ b/05_Functions.html
@@ -1,4 +1,4 @@
-// 2) Functions in JS ❎
+<!-- 2) Functions in JS ❎ -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -8,6 +8,6 @@
     <title>Functions in JS</title>
   </head>
   <body>
-    <script src="02_Function.js"></script>
+    <script src="05_Functions.js"></script>
   </body>
 </html>
