Update DOM examples and content in HTML and JavaScript files

--- a/06_DOM.html
+++ b/06_DOM.html
@@ -7,6 +7,11 @@
   </head>
   <body>
     <h1>Everything about DOM (Document Object Model) In JavaScript.</h1>
+    <h2>Hello Javascript!</h2>
+
+    <div>First div</div>
+    <div>Second div</div>
+    <div>Thirst div</div>
     <script src="06_DOM.js"></script>
   </body>
 </html>
