--- a/07_Event_handling.html
+++ b/07_Event_handling.html
@@ -9,7 +9,9 @@
   <body>
     <h1>Event Handling in Javascript</h1>
     <button id="btn">Click me!</button>
-    <div>This is Box</div>
+    <!-- <div>This is Box</div> -->
+
+    <button id="mode">Click me</button>
 
     <script src="07_Event_handling.js"></script>
   </body>
