--- a/08_index.html
+++ b/08_index.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Tic Tac Toe Game</title>
+    <link rel="stylesheet" href="08_index.css" />
   </head>
-  <body>    
+  <body>        
     <main>
       <h1>Tic Tac Toe Game using JavaScript</h1>
-      <div class="game">
-        <button class="box">x</button>
-        <button class="box">x</button>
-        <button class="box">x</button>
-        <button class="box">x</button>
-        <button class="box">x</button>
-        <button class="box">x</button>
-        <button class="box">x</button>
-        <button class="box">x</button>
-        <button class="box">x</button>
+      <div class="container">
+        <div class="game">
+          <button class="box">x</button>
+          <button class="box">0</button>
+          <button class="box">x</button>
+          <button class="box">0</button>
+          <button class="box">x</button>
+          <button class="box">0</button>
+          <button class="box">x</button>
+          <button class="box">0</button>
+          <button class="box">x</button>
+        </div>
       </div>
     </main>
 
