--- a/08_index.html
+++ b/08_index.html
@@ -6,7 +6,7 @@
     <title>Tic Tac Toe Game</title>
     <link rel="stylesheet" href="08_index.css" />
   </head>
-  <body>        
+  <body>
     <main>
       <h1>Tic Tac Toe Game using JavaScript</h1>
       <div class="container">
@@ -22,6 +22,7 @@
           <button class="box">x</button>
         </div>
       </div>
+      <button id="reset-btn">Reset Game</button>
     </main>
 
     <script src="08_index.js"></script>
