--- a/08_index.html
+++ b/08_index.html
@@ -11,15 +11,15 @@
       <h1>Tic Tac Toe Game using JavaScript</h1>
       <div class="container">
         <div class="game">
-          <button class="box">x</button>
-          <button class="box">0</button>
-          <button class="box">x</button>
-          <button class="box">0</button>
-          <button class="box">x</button>
-          <button class="box">0</button>
-          <button class="box">x</button>
-          <button class="box">0</button>
-          <button class="box">x</button>
+          <button class="box"></button>
+          <button class="box"></button>
+          <button class="box"></button>
+          <button class="box"></button>
+          <button class="box"></button>
+          <button class="box"></button>
+          <button class="box"></button>
+          <button class="box"></button>
+          <button class="box"></button>
         </div>
       </div>
       <button id="reset-btn">Reset Game</button>
