--- a/08_index.html
+++ b/08_index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="08_index.css" />
   </head>
   <body>
+    <div class="msg-container hide">
+      <div id="message">Winner</div>
+      <button id="new-btn">New Game</button>
+    </div>
     <main>
-      <h1>Tic Tac Toe Game using JavaScript</h1>
+      <h1 id="header">Tic Tac Toe Game using JavaScript</h1>
       <div class="container">
         <div class="game">
           <button class="box"></button>
