--- a/08_index.html
+++ b/08_index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="msg-container hide">
-      <div id="msg"></div>
+      <div id="msg">Winner</div>
       <button id="new-btn">New Game</button>
     </div>
     <main>
