--- a/08_index.html
+++ b/08_index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div class="msg-container hide">
+      // Message to display the winner
       <div id="msg">Winner</div>
       <button id="new-btn">New Game</button>
     </div>
@@ -26,6 +27,7 @@
           <button class="box"></button>
         </div>
       </div>
+      // Reset Button for resetting the game
       <button id="reset-btn">Reset Game</button>
     </main>
 
