--- a/09_index.html
+++ b/09_index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <h1>Creating Game, Rock, Paper, Scisors nusing JavaScript></h1>
+    <div></div>
+
     <script src="09_index.js"></script>
   </body>
 </html>
