--- a/09_index.html
+++ b/09_index.html
@@ -7,8 +7,32 @@
     <title>Rock, Paper, Scisorss</title>
   </head>
   <body>
-    <h1>Creating Game, Rock, Paper, Scisors nusing JavaScript></h1>
-    <div></div>
+    <h1>Rock Paper Scissors</h1>
+    <div class="choices">
+      <div class="choice">
+        <img src="./images/rock.png" alt="" />
+      </div>
+      <div class="choice">
+        <img src="./images/paper.png" alt="" />
+      </div>
+      <div class="choice">
+        <img src="./images/scissors.png" alt="" />
+      </div>
+    </div>
+    <div class="score-board">
+      <div class="score">
+        <p id="user-score">0</p>
+        <p>You</p>
+      </div>
+    <div class="score">
+      <div class="score">
+        <p id="comp-score">0</p>
+        <p>Comp</p>
+      </div>
+    </div>
+    <div class="msg-container">
+      <p id="msg">Play you move</p>
+    </div>
 
     <script src="09_index.js"></script>
   </body>
