Refactor API fetching example and enhance Currency Converter functionality with dropdown options and exchange rate updates

--- a/14_CurrencyConverter.html
+++ b/14_CurrencyConverter.html
@@ -25,13 +25,13 @@
           <div class="from">
             <p>From</p>
             <div class="select-container">
-              <img src="https://flagsapi.com/IN/flat/64.png" alt="" />
+              <img src="https://flagsapi.com/US/flat/64.png" alt="" />
               <select name="from">
-                <option value="INR">INR</option>
+                <!-- <option value="INR">INR</option>
                 <option value="USD">USD</option>
                 <option value="EUR">EUR</option>
                 <option value="GBP">GBP</option>
-                <option value="AUD">AUD</option>
+                <option value="AUD">AUD</option> -->
               </select>
             </div>
           </div>
@@ -39,13 +39,13 @@
           <div class="to">
             <p>To</p>
             <div class="select-container">
-              <img src="https://flagsapi.com/US/flat/64.png" alt="" />
-              <select name="from">
-                <option value="INR">INR</option>
+              <img src="https://flagsapi.com/IN/flat/64.png" alt="" />
+              <select name="to">
+                <!-- <option value="INR">INR</option>
                 <option value="USD" selected>USD</option>
                 <option value="EUR">EUR</option>
                 <option value="GBP">GBP</option>
-                <option value="AUD">AUD</option>
+                <option value="AUD">AUD</option> -->
               </select>
             </div>
           </div>
@@ -54,6 +54,7 @@
         <button>Get Exchange Rate</button>
       </form>
     </div>
+    <script src="14_CurrencyCode.js"></script>
     <script src="14_CurrencyConverter.js"></script>
   </body>
 </html>
